[gd_scene load_steps=44 format=2]

[ext_resource path="res://Scenes/PrisonCell.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Prisoner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/GridUnit.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Poop.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/UIFont1.tres" type="DynamicFont" id=5]
[ext_resource path="res://Resources/UIFont2_Small.tres" type="DynamicFont" id=6]
[ext_resource path="res://Resources/ProgressBar.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/Sprites/Feed, Harvest, Clean.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Hotdog Fall.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 96 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 96 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 96 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 32, 96 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 32, 96 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 0, 96, 32, 96 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 32, 96, 32, 96 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 9 )
region = Rect2( 64, 96, 32, 96 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 9 )
region = Rect2( 96, 96, 32, 96 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 9 )
region = Rect2( 128, 96, 32, 96 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 9 )
region = Rect2( 160, 96, 32, 96 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 9 )
region = Rect2( 0, 192, 32, 96 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 9 )
region = Rect2( 32, 192, 32, 96 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 9 )
region = Rect2( 64, 192, 32, 96 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 9 )
region = Rect2( 96, 192, 32, 96 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 9 )
region = Rect2( 128, 192, 32, 96 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 9 )
region = Rect2( 160, 192, 32, 96 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 9 )
region = Rect2( 0, 288, 32, 96 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 9 )
region = Rect2( 32, 288, 32, 96 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 9 )
region = Rect2( 64, 288, 32, 96 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 9 )
region = Rect2( 96, 288, 32, 96 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 9 )
region = Rect2( 128, 288, 32, 96 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 9 )
region = Rect2( 160, 288, 32, 96 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 9 )
region = Rect2( 0, 384, 32, 96 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 9 )
region = Rect2( 32, 384, 32, 96 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 9 )
region = Rect2( 64, 384, 32, 96 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 9 )
region = Rect2( 96, 384, 32, 96 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 9 )
region = Rect2( 128, 384, 32, 96 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 9 )
region = Rect2( 160, 384, 32, 96 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 27 ), SubResource( 27 ), SubResource( 28 ), SubResource( 28 ), SubResource( 28 ), SubResource( 27 ), SubResource( 27 ), SubResource( 27 ), SubResource( 28 ), SubResource( 28 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 31 ), SubResource( 32 ), SubResource( 32 ), SubResource( 33 ), SubResource( 33 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 16, 16 )

[node name="GridUnit" type="Node2D" groups=["unit"]]
script = ExtResource( 3 )

[node name="PrisonCell" parent="." instance=ExtResource( 1 )]

[node name="Prisoner" parent="." instance=ExtResource( 2 )]

[node name="Poop" parent="." instance=ExtResource( 4 )]
position = Vector2( 152, 120 )

[node name="Poop2" parent="." instance=ExtResource( 4 )]
position = Vector2( 152, 72 )

[node name="Poop3" parent="." instance=ExtResource( 4 )]
position = Vector2( 152, 32 )

[node name="HotdogSprite" type="AnimatedSprite" parent="."]
position = Vector2( 184, 32 )
scale = Vector2( 3, 3 )
frames = SubResource( 34 )

[node name="Control" type="Control" parent="."]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 40.0

[node name="FeedButton" type="Button" parent="Control"]
margin_top = 184.0
margin_right = 80.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 6 )

[node name="HarvestButton" type="Button" parent="Control"]
margin_left = 88.0
margin_top = 184.0
margin_right = 168.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 6 )

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_top = 8.0
margin_right = 256.0
margin_bottom = 22.0
custom_styles/fg = ExtResource( 7 )
value = 90.0
percent_visible = false

[node name="NameLabel" type="Label" parent="Control/ProgressBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 5 )
text = "Stevo"
align = 1

[node name="BuyButton" type="Button" parent="Control"]
margin_left = 60.0
margin_top = 107.0
margin_right = 211.0
margin_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 6 )
text = "Buy ($20)"

[node name="CleanButton" type="Button" parent="Control"]
margin_left = 176.0
margin_top = 184.0
margin_right = 256.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 6 )

[node name="HarvestedLabel" type="Label" parent="Control"]
anchor_right = 0.5
margin_right = 65.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 5 )
text = "Harvested $X"

[node name="HungerTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="PoopTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="HarvestTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HarvestedLabelTween" type="Tween" parent="."]

[node name="AppleSprite" type="Sprite" parent="."]
position = Vector2( 40, 224 )
scale = Vector2( 4, 4 )
texture = SubResource( 1 )

[node name="SickleSprite" type="Sprite" parent="."]
position = Vector2( 128, 216 )
scale = Vector2( 4, 4 )
texture = SubResource( 2 )

[node name="BroomSprite" type="Sprite" parent="."]
position = Vector2( 216, 224 )
scale = Vector2( 4, 4 )
texture = SubResource( 3 )

[connection signal="pressed" from="Control/FeedButton" to="." method="_on_FeedButton_pressed"]
[connection signal="pressed" from="Control/HarvestButton" to="." method="_on_HarvestButton_pressed"]
[connection signal="pressed" from="Control/BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="Control/CleanButton" to="." method="_on_CleanButton_pressed"]
[connection signal="timeout" from="HungerTimer" to="." method="_on_HungerTimer_timeout"]
[connection signal="timeout" from="PoopTimer" to="." method="_on_PoopTimer_timeout"]
[connection signal="timeout" from="HarvestTimer" to="." method="_on_HarvestTimer_timeout"]
